--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirBnB clone</title>
     <style>
+        body
+        {
+            margin: 0;
+            padding: 0;
+        }
         header
         {
             background-color: #FF0000;
@@ -24,7 +29,7 @@
         }
     </style>
 </head>
-<body style="margin: 0; padding: 0;">
+<body>
     <header></header>
     <footer>
         Holberton School
