Fixing error for task 6, adding files for task 7 and 8

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="stylesheet" href="styles/8-places.css">
 </head>
 <body>
     <header>
@@ -39,6 +40,40 @@
                 </ul>
             </div>
             <button>Search</button>
+        </section>
+        <section class="places">
+            <h1>Places</h1>
+            <article>
+                <h2>My home</h2>
+                <div class="price_by_night"><span>$80</span></div>
+                <div class="information">
+                    <div class="max_guest">
+                        <span></span>
+                        <h4>2 Guest</h4>
+                    </div>
+                </div>
+            </article>
+            <article>
+                <h2>Tiny House</h2>
+                <div class="price_by_night"><span>$65</span></div>
+                <div class="information">
+                    <div class="max_guest">
+                        <span></span>
+                        <h4>2 Guest</h4>
+                    </div>
+                    
+                </div>
+            </article>
+            <article>
+                <h2>A suite</h2>
+                <div class="price_by_night"><span>$180</span></div>
+                <div class="information">
+                    <div class="max_guest">
+                        <span></span>
+                        <h4>5 Guest</h4>
+                    </div>
+                </div>
+            </article>
         </section>
     </div>
     <footer>
