Fixing footer, and ading places boxes for task 8

--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -43,41 +43,96 @@
         </section>
         <section class="places">
             <h1>Places</h1>
-            <article>
-                <h2>My home</h2>
-                <div class="price_by_night"><span>$80</span></div>
-                <div class="information">
-                    <div class="max_guest">
-                        <span></span>
-                        <h4>2 Guest</h4>
+            <div class="places_inside">
+                <article>
+                    <h2>My home</h2>
+                    <div class="price_by_night"><span>$80</span></div>
+                    <div class="information">
+                        <div class="max_guest">
+                            <span class="guest"></span>
+                            <h4>2 Guest</h4>
+                        </div>
+                        <div class="number_rooms">
+                            <span class="bed_room"></span>
+                            <h4>1 Bedroom</h4>
+                        </div>
+                        <div class="number_bathrooms">
+                            <span class="bath_room"></span>
+                            <h4>1 Bathroom</h4>
+                        </div>
                     </div>
-                </div>
-            </article>
-            <article>
-                <h2>Tiny House</h2>
-                <div class="price_by_night"><span>$65</span></div>
-                <div class="information">
-                    <div class="max_guest">
-                        <span></span>
-                        <h4>2 Guest</h4>
+                    <div class="user">
+                        <p><strong>Owner: </strong>Joe Gebbia</p>
                     </div>
-                    
-                </div>
-            </article>
-            <article>
-                <h2>A suite</h2>
-                <div class="price_by_night"><span>$180</span></div>
-                <div class="information">
-                    <div class="max_guest">
-                        <span></span>
-                        <h4>5 Guest</h4>
+                    <div class="description">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        when an unknown printer took a galley of type and scrambled it to make a type
+                        specimen book. It has survived not only five centuries, but also the leap into 
+                        electronic typesetting, remaining essentially unchanged.
                     </div>
-                </div>
-            </article>
+                </article>
+                <article>
+                    <h2>Tiny House</h2>
+                    <div class="price_by_night"><span>$65</span></div>
+                    <div class="information">
+                        <div class="max_guest">
+                            <span class="guest"></span>
+                            <h4>2 Guest</h4>
+                        </div>
+                        <div class="number_rooms">
+                            <span class="bed_room"></span>
+                            <h4>1 Bedroom</h4>
+                        </div>
+                        <div class="number_bathrooms">
+                            <span class="bath_room"></span>
+                            <h4>1 Bathroom</h4>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <p><strong>Owner: </strong>Brian Chesky</p>
+                    </div>
+                    <div class="description">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        when an unknown printer took a galley of type and scrambled it to make a type
+                        specimen book.
+                    </div>
+                </article>
+                <article>
+                    <h2>A suite</h2>
+                    <div class="price_by_night"><span>$180</span></div>
+                    <div class="information">
+                        <div class="max_guest">
+                            <span class="guest"></span>
+                            <h4>2 Guest</h4>
+                        </div>
+                        <div class="number_rooms">
+                            <span class="bed_room"></span>
+                            <h4>1 Bedroom</h4>
+                        </div>
+                        <div class="number_bathrooms">
+                            <span class="bath_room"></span>
+                            <h4>1 Bathroom</h4>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <p><strong>Owner: </strong>Nathan Blecharczyk</p>
+                    </div>
+                    <div class="description">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                        when an unknown printer took a galley of type and scrambled it to make a type
+                        specimen book. It has survived not only five centuries, but also the leap into 
+                        electronic typesetting, remaining essentially unchanged.
+                    </div>
+                </article>
+            </div>
+            
         </section>
     </div>
     <footer>
-        Holberton School
+        <p>Holberton School</p>
     </footer>
 </body>
 </html>
