--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -20,7 +20,7 @@
         </section>
     </div>
     <footer>
-        Holberton School
+        <p>Holberton School</p>
     </footer>
 </body>
 </html>
