--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -28,7 +28,7 @@
         </section>
     </div>
     <footer>
-        Holberton School
+        <p>Holberton School</p>
     </footer>
 </body>
 </html>
