--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -42,7 +42,7 @@
         </section>
     </div>
     <footer>
-        Holberton School
+        <p>Holberton School</p>
     </footer>
 </body>
 </html>
