--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -43,19 +43,21 @@
         </section>
         <section class="places">
             <h1>Places</h1>
-            <article>
-                <h2>My home</h2>
-            </article>
-            <article>
-                <h2>Tiny House</h2>
-            </article>
-            <article>
-                <h2>A suite</h2>
-            </article>
+            <div class="places_inside">
+                <article>
+                    <h2>My home</h2>
+                </article>
+                <article>
+                    <h2>Tiny House</h2>
+                </article>
+                <article>
+                    <h2>A suite</h2>
+                </article>
+            </div>
         </section>
     </div>
     <footer>
-        Holberton School
+        <p>Holberton School</p>
     </footer>
 </body>
 </html>
